--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 <body>
     <div class="calculator">
         <div class="display">
-
+            <div class="expression"></div>
+            <div class="result">0</div>
         </div>
         <div class="buttons">
 
             <button class="number">7</button>
             <button class="number">8</button>
             <button class="number">9</button>
-            <button class="operator">X</button>
+            <button class="operator">x</button>
 
             <button class="number">4</button>
             <button class="number">5</button>
@@ -31,7 +32,7 @@
             <button class="number">3</button>
             <button class="operator">+</button>
 
-            <button class="number">negate</button>
+            <button class="operator">+/-</button>
             <button class="number">0</button>
             <button class="number">.</button>
             <button class="operator">=</button>
@@ -40,5 +41,6 @@
 
     </div>
 </body>
+<script src="js/app.js"></script>
 
 </html>
