-feat maximize and other calculation features

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="calculator" id="calculator">
         <h1 id="titleBar">Calculator</h1>
+        <img src="images/maximize.svg" alt="maximize" class="maximize-icon" id="maximize">
         <div class="display">
             <div class="expression"></div>
             <div class="result">0</div>
