--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/app.min.css">
     <title>Windows 10 Calculator</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -28,23 +30,23 @@
                     class="variable">x</span></button>
             <button class="dark" data-functionality="power" data-type="singleoperator"><span
                     class="variable">x</span><sup>2</sup></button>
-            <button class="dark" data-functionality="sqrt" data-type="singleoperator">sqrt(x)</button>
-            <button class="dark" data-functionality="divide" data-type="operator">÷</button>
+            <button class="dark" data-functionality="sqrt" data-type="singleoperator">√</button>
+            <button class="dark big" data-functionality="divide" data-type="operator">÷</button>
 
             <button data-type="number">7</button>
             <button data-type="number">8</button>
             <button data-type="number">9</button>
-            <button class="dark" data-functionality="multiply" data-type="operator">x</button>
+            <button class="dark big" data-functionality="multiply" data-type="operator">&times;</button>
 
             <button data-type="number">4</button>
             <button data-type="number">5</button>
             <button data-type="number">6</button>
-            <button class="dark" data-functionality="subtract" data-type="operator">-</button>
+            <button class="dark big" data-functionality="subtract" data-type="operator">-</button>
 
             <button data-type="number">1</button>
             <button data-type="number">2</button>
             <button data-type="number">3</button>
-            <button class="dark" data-functionality="add" data-type="operator">+</button>
+            <button class="dark big" data-functionality="add" data-type="operator">+</button>
 
             <button class="dark bg-white" data-functionality="negate" data-type="singleoperator">+/-</button>
             <button data-type="number">0</button>
